[package]
name = "turndown"
version = "0.1.0"
authors = ["Michael Wallner <m.wallner@coderscantina.com>"]
description = "An opionated Rust port of Turndown.js"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["markdown", "html", "converter", "turndown"]
exclude = [".github"]
rust-version = "1.65.0"

[[bin]]
name = "turndown"
path = "src/main.rs"

[dependencies]
html5ever = "0.36"
tendril = "0.4"
regex = "1"
markup5ever_rcdom = "0.36"
